--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
     "mongoose": "^5.6.2"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "version": "node --version"
   },
-  "name": "node",
+  "name": "pollocampero",
   "version": "1.0.0",
-  "description": "Unity Server",
+  "description": "Pollo Campero API RESTful",
   "main": "server.js",
   "author": "Sergiosoba",
   "license": "ISC"
