--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "argon2-ffi": "^2.0.0",
     "body-parser": "^1.19.2",
     "express": "^4.17.3",
     "mongoose": "^5.6.2"
